// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link with an anchor link renders correctly 1`] = `
<a
  class="css-1fvugpk"
  href="#fn-1"
/>
`;

exports[`Link with an external link renders correctly 1`] = `
<a
  class="css-1fvugpk"
  href="https://www.example.com"
  rel="noopener"
  target="_blank"
/>
`;

exports[`Link with an external link with a rel property renders correctly 1`] = `
<a
  class="css-1fvugpk"
  href="https://www.example.com"
  rel="license noopener"
  target="_blank"
/>
`;

exports[`Link with an internal link renders correctly 1`] = `
<a
  aria-current="page"
  class="css-1fvugpk"
  href="/"
/>
`;
